syntax = "proto3";

package chat_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/Ananev-Alexandr/microservices/chat-server/chat_api;chat_api";


service ChatAPI {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

enum Role {
    USER = 0;
    ADMIN = 1;
}

message CreateRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
} 


message CreateResponse {
    int64 id = 1;
} 


message DeleteRequest {
    int64 id = 1;
}

message SendMessageRequest {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}
